--- a/assets/css/dashboard-style.css
+++ b/assets/css/dashboard-style.css
@@ -41,3 +41,9 @@
   border-radius: var(--bs-border-radius) !important;
   transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out !important;
 }
+
+.edit-select {
+  font-size: 1rem !important;
+  font-weight: 400 !important;
+  line-height: 1.5 !important;
+}
